--- a/pgt52m/week-4/overview.qmd
+++ b/pgt52m/week-4/overview.qmd
@@ -5,36 +5,41 @@ toc: true
 toc-location: right
 ---
 
-Last week you summarised and plotted single variables. This week you will start plotting data sets with more than one variable. This means you need to be able determine which variable is the response and which is the explanatory. You will find out what is meant by "tidy" data and how to perform a simple data tidying task. Finally you will discover how to save your figures and place them in documents.
-
-
-
+Last week you summarised and plotted data sets with one variable. This
+week you will start plotting data sets with more than one variable. This
+means you need to be able determine which variable is the response and
+which is the explanatory. You will find out what is meant by "tidy" data
+and how to perform a simple data tidying task. Finally you will discover
+how to save your figures to file.
 
 ### Learning objectives
 
--   summarise and plot appropriately datasets with more than one variable
--   recognise that variables can be categorised by their role in analysis
--   explain what is meant by 'tidy' data and be able to perform some data tidying tasks.
--   save figures to file
--   create neat reports which include text and figures
+-   summarise and plot, appropriately, datasets with more than one
+    variable
+-   recognise that variables can be categorised by their role in
+    analysis
+-   explain what is meant by 'tidy' data and be able to perform some
+    data tidying tasks.
+-   save figures to file by scripting
 
 ### Instructions
 
 1.  [Prepare](study_before_workshop.qmd)
 
-    i. 📖 From importing to reporting
-
+    i.  📖 From importing to reporting
 
 2.  [Workshop](workshop.qmd)
 
-    i. 💻 Summarise and plot datasets with more than one variable. 
-    
-    ii. 💻  Practice with working directories, importing data, formatting figures and the pipe
+    i.  💻 Summarise and plot datasets with more than one variable.
 
-    ii. 💻  Lay out text, figures and figure legends in documents 
+    ii. 💻 Practice with working directories, importing data, formatting
+        figures and the pipe
+
+    iii. 💻 Script saving figures to file for reproducibility
 
 3.  [Consolidate](study_after_workshop.qmd)
 
-    i. 💻 Summarise and plot a dataframe from the workshop
+    i.  💻 Summarise and plot a dataframe from the workshop
 
-    ii. 💻 Practice the complete RStudio Project worklfow for a new dataset 
+    ii. 💻 Practice the complete RStudio Project worklfow for a new
+        dataset
