--- a/pgt52m/week-4/study_before_workshop.qmd
+++ b/pgt52m/week-4/study_before_workshop.qmd
@@ -5,6 +5,10 @@ toc: true
 toc-location: right
 ---
 
-1.  📖 Read [From importing to reporting](https://3mmarand.github.io/comp4biosci/import_to_report.html). The first part of this chapter is about data import which we covered in the last workshop. You may be able to skip that part or you may find it useful to revise. The section on [Summarising data](https://3mmarand.github.io/comp4biosci/import_to_report.html#summarising-data) will be mainly new.
-
-
+1.  📖 Read [From importing to
+    reporting](https://3mmarand.github.io/comp4biosci/import-to-report.html).
+    The first part of this chapter is about data import which we covered
+    in the last workshop. You may be able to skip that part or you may
+    find it useful to revise. The section on [Summarising
+    data](https://3mmarand.github.io/comp4biosci/import-to-report.html#summarising-data)
+    will be mainly new.
